[workspace]
resolver = "2"
members = [
    "crates/fj",
    "crates/fj-core",
    "crates/fj-export",
    "crates/fj-interop",
    "crates/fj-math",
    "crates/fj-viewer",
    "crates/fj-window",

    "models/all",
    "models/color",
    "models/cuboid",
    "models/holes",
    "models/spacer",
    "models/split",
    "models/star",
    "models/vertices-indices",

    "tools/autolib",
    "tools/automator",
    "tools/cross-compiler",
    "tools/export-validator",
    "tools/release-operator",
]
default-members = [
    "crates/fj",
    "crates/fj-core",
    "crates/fj-export",
    "crates/fj-interop",
    "crates/fj-math",
    "crates/fj-viewer",
]


[workspace.package]
version = "0.49.1"
edition = "2024"
description = "Modular B-Rep CAD kernel in Rust"
readme = "README.md"
homepage = "https://www.hax.pe/xrio"
repository = "https://github.com/fabohax/xrio"
license = "0BSD"
keywords = ["cad", "programmatic", "code-cad"]
categories = ["encoding", "mathematics", "rendering"]


[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"


[workspace.dependencies.fj]
version = "0.49.0"
path = "crates/fj"

[workspace.dependencies.fj-core]
version = "0.49.0"
path = "crates/fj-core"

[workspace.dependencies.fj-export]
version = "0.49.0"
path = "crates/fj-export"

[workspace.dependencies.fj-interop]
version = "0.49.0"
path = "crates/fj-interop"

[workspace.dependencies.fj-math]
version = "0.49.0"
path = "crates/fj-math"

[workspace.dependencies.fj-viewer]
version = "0.49.0"
path = "crates/fj-viewer"
